Dev-RBI/src/objects/Project__c.object
<CustomObject>
    <fields>
        <fullName>Actual_No_of_Towers__c</fullName>
        <label>Actual No of Towers</label>
        <summaryForeignKey>Tower__c.Project__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Actual_Site_Land_Area__c</fullName>
        <label>Actual Site Land Area</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Aerobic_Spa__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aerobic / Spa</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Allowed_FSI__c</fullName>
        <label>Allowed FSI</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Amphitheatre__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Amphitheatre</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approx_No_of_Units__c</fullName>
        <label>Approx. No. of Units</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Architect_Contractor_Address__c</fullName>
        <formula>IF(ISBLANK(Architect_Id__r.BillingStreet) , &apos;&apos; , Architect_Id__r.BillingStreet &amp; &apos;,&apos;)  &amp; IF(ISBLANK( Architect_Id__r.BillingCity), &apos;&apos;, Architect_Id__r.BillingCity &amp; &apos;,&apos;) &amp;  IF(ISBLANK(Architect_Id__r.BillingState), &apos;&apos; , Architect_Id__r.BillingState &amp; &apos;,&apos; ) &amp; IF(ISBLANK(Architect_Id__r.BillingCountry), &apos;&apos; , Architect_Id__r.BillingCountry &amp; &apos;,&apos;) &amp; IF(ISBLANK(Architect_Id__r.BillingPostalCode), &apos;&apos; , Architect_Id__r.BillingPostalCode)</formula>
        <label>Architect/Contractor Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Architect_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Architect Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects (Architect Id)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Architect_Name__c</fullName>
        <formula>Architect_Id__r.Name</formula>
        <label>Architect Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Architect_s_Registration_Number__c</fullName>
        <formula>Architect_Id__r.Registration_Number__c</formula>
        <label>Architect&apos;s Registration Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Assigned_to_city__c</fullName>
        <label>Assigned to city</label>
        <picklist>
            <picklistValues>
                <fullName>NCR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MMR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Badminton_Court__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Badminton Court</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Bank_ATM__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Bank ATM</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Basketball_Post__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Basketball Post</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Brochre_Address_Detail__c</fullName>
        <formula>IF(ISBLANK(Brochure_Address_Line_1__c) , &apos;&apos; , Brochure_Address_Line_1__c &amp; &apos;,&apos;) &amp; IF(ISBLANK(  Brochure_Address_Line_2__c), &apos;&apos;,  Brochure_Address_Line_2__c &amp; &apos;,&apos;) &amp; IF(ISBLANK(TEXT(Brochure_City__c)), &apos;&apos; , (TEXT(Brochure_City__c) &amp; &apos;,&apos; ) &amp; IF(ISBLANK(TEXT( Brochure_State__c)), &apos;&apos; , TEXT( Brochure_State__c) &amp; &apos;,&apos;) &amp; IF(ISBLANK( Brochure_Zipcode__c), &apos;&apos; ,Brochure_Zipcode__c))</formula>
        <label>Brochre Address Detail</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brochure_Address_Line_1__c</fullName>
        <label>Brochure Address Line 1</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brochure_Address_Line_2__c</fullName>
        <label>Brochure Address Line 2</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Brochure_City__c</fullName>
        <label>Brochure City</label>
        <picklist>
            <controllingField>Brochure_State__c</controllingField>
            <picklistValues>
                <fullName>Agra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alwar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahadurgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhiwani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhiwari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharuheda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharuhera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faridabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghaziabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Noida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gurgaon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manesar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meerut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mohali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neemrana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panchkula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panipat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rewari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rohtak</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Secunderabad</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brochure_State__c</fullName>
        <label>Brochure State</label>
        <picklist>
            <picklistValues>
                <fullName>Andaman &amp; Nicobar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andhra Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arunachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Assam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bihar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chattisgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dadra &amp; Nagar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daman &amp; Diu</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Goa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gujrat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Haryana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Himachal Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jammu &amp; Kashmir</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Jharkhand</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnataka</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kerala</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lakshdweep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Madhya Pradesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maharashtra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meghalaya</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mizoram</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nagaland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Orissa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pondichery</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Punjab</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rajasthan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sikkim</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Brochure_Zipcode__c</fullName>
        <label>Brochure Zipcode</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Children_Play_Area__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Children Play Area</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Clubhouse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Clubhouse</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Commercial_Area_No_of_shops__c</fullName>
        <label>If Mixed,Commercial Area / No. of shops</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Completion_Date__c</fullName>
        <label>Completion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Constitution__c</fullName>
        <label>Constitution</label>
        <picklist>
            <picklistValues>
                <fullName>Joint Venture</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Subsidiary</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Construction_Start_Date__c</fullName>
        <label>Construction Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Person__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Convenience_Store__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Convenience Store</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Count_Of_Customers__c</fullName>
        <description>Used in FollowUpVisit Batch</description>
        <label>Count Of Customers</label>
        <summaryForeignKey>Customer_Projects__c.Project_Id__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Daycare_Cresche__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Day Care / Cresche</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Developer_Address__c</fullName>
        <description>This field is used in reports.</description>
        <formula>IF(ISBLANK(Developer_Id__r.BillingStreet) , &apos;&apos; , Developer_Id__r.BillingStreet &amp; &apos;,&apos;) &amp; IF(ISBLANK( Developer_Id__r.BillingCity), &apos;&apos;, Developer_Id__r.BillingCity &amp; &apos;,&apos;) &amp; IF(ISBLANK(Developer_Id__r.BillingState), &apos;&apos; , Developer_Id__r.BillingState &amp; &apos;,&apos; ) &amp; IF(ISBLANK(Developer_Id__r.BillingPostalCode ), &apos;&apos; ,Developer_Id__r.BillingPostalCode  &amp; &apos;,&apos;) &amp; IF(ISBLANK(Developer_Id__r.BillingCountry), &apos;&apos; ,Developer_Id__r.BillingCountry)</formula>
        <label>Developer Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Bank_AC_No__c</fullName>
        <description>Field to store the developer&apos;s bank account number</description>
        <label>Developer Bank A/C No</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Bank_Name__c</fullName>
        <description>Field to store the Bank Name of the Developer</description>
        <label>Developer Bank Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_City__c</fullName>
        <description>Used in Project Trigger Handler</description>
        <formula>Developer_Id__r.BillingCity</formula>
        <label>Developer City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Correspondence_Address__c</fullName>
        <formula>IF(ISBLANK(Developer_Id__r.ShippingStreet) , &apos;&apos; , Developer_Id__r.ShippingStreet &amp; &apos;,&apos;) &amp; IF(ISBLANK( Developer_Id__r.ShippingCity), &apos;&apos;, Developer_Id__r.ShippingCity &amp; &apos;,&apos;) &amp; IF(ISBLANK(Developer_Id__r.ShippingState), &apos;&apos; , Developer_Id__r.ShippingState &amp; &apos;,&apos; ) &amp; IF(ISBLANK(Developer_Id__r.ShippingPostalCode), &apos;&apos; ,Developer_Id__r.ShippingPostalCode &amp; &apos;,&apos;) &amp; IF(ISBLANK(Developer_Id__r.ShippingCountry), &apos;&apos; ,Developer_Id__r.ShippingCountry)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Developer Correspondence Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Developer Id</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Developer_Name_Cust_Provided__c</fullName>
        <description>Stores the Developer Name as entered by the Customer</description>
        <label>Developer Name (Cust. Provided)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Name__c</fullName>
        <formula>Developer_Id__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Developer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Developer_Phone_Cust_Provided__c</fullName>
        <description>Stores the phone number of the developer provided by the Customer</description>
        <label>Developer Phone (Cust. Provided)</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Document_Received_by__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Captures who received Document.</description>
        <label>Document Received by</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Document_Received_date__c</fullName>
        <description>Capture Document Received date for the project.</description>
        <label>Document Received date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expected_Possesion_Date__c</fullName>
        <label>Expected Possesion Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>FAR_Approved_as_per_Plan__c</fullName>
        <label>FAR Approved as per Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FAR_constructed__c</fullName>
        <label>FAR constructed</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>FSI_Deviation__c</fullName>
        <formula>IF((FAR_constructed__c  &gt;  FAR_Approved_as_per_Plan__c ), &apos;Yes&apos;, &apos;No&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FSI Deviation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Report_Provided__c</fullName>
        <label>First Report Provided</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Gymnasium__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Gymnasium</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Helipad__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Helipad</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Land_Area_as_per_documents__c</fullName>
        <label>Land Area (as per documents)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Land_Area_as_per_patta__c</fullName>
        <label>Land Area (as per patta)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Land_Area_in_acres__c</fullName>
        <description>Stores the Land Area used for the development of the project</description>
        <label>Land Area (in Acres)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Landscaped_Pathway__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Landscaped Pathway</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Launch_Date__c</fullName>
        <label>Launch Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Launched_Flag__c</fullName>
        <formula>IF( Launch_Date__c &lt; TODAY(), &apos;True&apos;, &apos;False&apos;)</formula>
        <label>Launched Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>License_Registration_Number__c</fullName>
        <label>License Registration Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Shareholding_Group_1__c</fullName>
        <label>Major Share Hold Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Shareholding_Group_2__c</fullName>
        <label>Major Share Hold Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Major_Shareholding_Group_3__c</fullName>
        <label>Major Share Hold Group</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Medicare_Store__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Medicare / Store</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Name_of_the_Municipal_Corporation__c</fullName>
        <label>Name of the Municipal Corporation</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Occupancy__c</fullName>
        <label>Occupancy (%)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Other_Amenities__c</fullName>
        <label>Others</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Banks_Prov_Loan_1__c</fullName>
        <label>Bank Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Banks_Prov_Loan_2__c</fullName>
        <label>Bank Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Other_Banks_Prov_Loan_3__c</fullName>
        <label>Bank Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PAS_Manager_Email__c</fullName>
        <description>This field is updated when the PAS Manager is changed</description>
        <label>PAS Manager Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>PAS_Manager_Name__c</fullName>
        <description>Used in RBI_AlertBatch class for Email(gives First name of the PAS Manager)</description>
        <formula>Team_Leader__r.FirstName</formula>
        <label>PAS Manager Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Parent_Project_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Parent Project Id</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Projects</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Parent_Project_Name__c</fullName>
        <formula>Parent_Project_Id__r.Project_Name__c</formula>
        <label>Parent Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Party_Lawn__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Party Lawn</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Planned_No_of_Towers__c</fullName>
        <label>Planned No of Towers</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Units__c</fullName>
        <label>Planned Units</label>
        <summarizedField>Tower__c.Launched_Units__c</summarizedField>
        <summaryForeignKey>Tower__c.Project__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Plot_Area__c</fullName>
        <label>Plot Area (in Acres)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Project_Category__c</fullName>
        <label>Project Category</label>
        <picklist>
            <picklistValues>
                <fullName>Mid Segment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Affordable Segment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Luxury Segment</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_LatLong__c</fullName>
        <label>Project LatLong</label>
        <scale>2</scale>
        <type>Location</type>
    </fields>
    <fields>
        <fullName>Project_Locality__c</fullName>
        <label>Project Locality</label>
        <picklist>
            <picklistValues>
                <fullName>Low Income</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lower Middle Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Middle Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upper Class</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Posh</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <label>Project Name</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Phase__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Phase</label>
        <referenceTo>Project__c</referenceTo>
        <relationshipLabel>Projects (Project Phase)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Project_Photos__c</fullName>
        <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=015900000013UWx&apos;,&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Photos</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Region__c</fullName>
        <label>Project Region</label>
        <picklist>
            <picklistValues>
                <fullName>East</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>North</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>West</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Rejected__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicated whether the project created by Customer has been approved or rejected</description>
        <label>Project Rejected?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Project_Type__c</fullName>
        <label>Project Type</label>
        <picklist>
            <picklistValues>
                <fullName>Apartment</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial / Mall</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Row House</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Villa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mixed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Commercial Mall</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Query_L_End_Date__c</fullName>
        <description>End Date for querying the Launched Projects</description>
        <label>Query_L_End_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Query_L_Start_Date__c</fullName>
        <description>Start date for querying the Launched Projects</description>
        <label>Query_L_Start_Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>RBI_Created_By_Batch_Job__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RBI Created By Batch Job</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Rejection_Remark__c</fullName>
        <description>This captures the Rejection Remark from technical manager(Entered only for projects created by customer).</description>
        <label>Rejection Remark</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Senior_Citizen_Facilities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Senior Citizen Facilities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Site_Address_Actual__c</fullName>
        <formula>IF(ISBLANK(Site_Address_Line_1__c) , &apos;&apos; , Site_Address_Line_1__c &amp; &apos;,&apos;) &amp; IF(ISBLANK(Site_Address_Line_2__c), &apos;&apos;, Site_Address_Line_2__c &amp; &apos;,&apos;) &amp; IF(ISBLANK(Site_Address_Landmark__c), &apos;&apos; , Site_Address_Landmark__c &amp; &apos;,&apos; ) &amp; IF(ISBLANK(TEXT(Site_Address_City__c )), &apos;&apos; ,TEXT(Site_Address_City__c) &amp; &apos;,&apos;) &amp; IF(ISBLANK(TEXT(  Site_Address_State__c)), &apos;&apos; ,TEXT(  Site_Address_State__c) &amp; &apos;,&apos;) &amp; IF(ISBLANK(Site_Address_zipcode__c), &apos;&apos; ,Site_Address_zipcode__c)</formula>
        <label>Site Address Actual</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Address_City__c</fullName>
        <label>Site Address City</label>
        <picklist>
            <controllingField>Site_Address_State__c</controllingField>
            <picklistValues>
                <fullName>Agra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ahmedabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alwar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahadurgarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangalore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhiwani</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhiwari</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chandigarh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chennai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delhi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharuheda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dharuhera</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Faridabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gachar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghaziabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ghazipur</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Greater Noida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gurgaon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hyderabad</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Karnal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manesar</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meerut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mohali</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mumbai</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neemrana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Noida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Palwal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panchkula</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Panipat</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Pune</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Site_Address_Landmark__c</fullName>
        <label>Site Address Landmark</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Address_Line_1__c</fullName>
        <label>Site Address Line 1</label>
        <length>75</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Site_Address_Line_2__c</fullName>
        <label>Site Address Line 2</label>
        <length>75</length>
        <type>Text</type>
    </fields>
</CustomObject>